Fix a horizontal scrollbar showing because of the yellow sun

--- a/components/YellowSun/styles.module.scss
+++ b/components/YellowSun/styles.module.scss
@@ -1,3 +1,13 @@
+.hide_overflow {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: hidden;
+  pointer-events: none;
+}
+
 .yellow_sun {
   position: absolute;
   top: 0;
